--- a/mysite/templates/polls/shop_list.html
+++ b/mysite/templates/polls/shop_list.html
@@ -399,7 +399,7 @@
 
         <div class="row">
         {% for shop in tea_shops %}
-            <div class="col-12 col-md-6 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="shop-card">
                     {% if user.is_authenticated %}
                     <div class="favorite-btn" onclick="toggleFavorite(event, 'shop', {{ shop.id }}, this)" data-shop-id="{{ shop.id }}">
@@ -407,7 +407,7 @@
                     </div>
                     {% endif %}
 
-                    <a href="{% url 'shop_detail' shop.id %}" class="shop-card-link">
+                    <a href="{% url 'shop_detail' shop.id %}?next={{ request.get_full_path|urlencode }}" class="shop-card-link">
                         <!-- 照片區域 -->
                         {% load static %}
                         <div class="shop-image-container mb-3">
@@ -422,12 +422,14 @@
 
                         <!-- 簡化的店家資訊 -->
                         <div class="d-flex justify-content-between align-items-start mb-2" style="padding-right: 50px;">
-                            <div class="shop-name">{{ shop.name }}</div>
-                            {% if shop.is_open_now == True %}
-                                <span class="badge-open"><i class="fas fa-check-circle"></i> 營業中</span>
-                            {% elif shop.is_open_now == False %}
-                                <span class="badge-closed"><i class="fas fa-times-circle"></i> 休息中</span>
-                            {% endif %}
+                            <div class="shop-name flex-grow-1" style="margin-right: 10px;">{{ shop.name }}</div>
+                            <div style="flex-shrink: 0;">
+                                {% if shop.is_open_now == True %}
+                                    <span class="badge-open"><i class="fas fa-check-circle"></i> 營業中</span>
+                                {% elif shop.is_open_now == False %}
+                                    <span class="badge-closed"><i class="fas fa-times-circle"></i> 休息中</span>
+                                {% endif %}
+                            </div>
                         </div>
 
                         <div class="shop-rating mb-2">
